--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 									<button class="form_btn login_btn active_btn my_log_in" data-form="login_form ">Login</button>
 									<button class="form_btn singUp_btn my_log_in" data-form="singUp_form">Sing up</button>
 								</div>
-								<form action="" class="login_form show_form my_log_in">
+								<div  class="form_ctrl login_form show_form my_log_in">
 									<label for="email" class="my_log_in">E-mail</label>
 									<input type="email" name="email" class="my_log_in" required />
 									<label for="password"class="my_log_in">Password
@@ -56,8 +56,8 @@
 									<p class="error_msg msg_two my_log_in">Email and password fields are required</p>
 									<button type="submit" class="my_log_in">Send</button>
 									<a href="#" class="form_btn my_log_in" data-form="forgot_pass">forgot your password?</a>
-								</form>
-								<form action="" class="singUp_form my_log_in">
+								</div>
+								<div  class="form_ctrl  singUp_form my_log_in">
 									<label for="name">Name and lastname</label>
 									<input type="text" name="name" class="my_log_in" required></input>
 
@@ -71,8 +71,8 @@
 									<input type="password" name="password" class="my_log_in" required></input>
 									<p>By submiting your request you agree to our <a href="">terms of service</a></p>
 									<button type="submit" class="btn my_log_in">Send</button> 
-								</form>
-								<form action="" class="forgot_pass my_log_in">
+								</div>
+								<div  class=" form_ctrl  forgot_pass my_log_in">
 									<h4 class="my_log_in">Forgot your password?</h4>
 									<p class="my_log_in">Enter your e-mail and we will send <br> you 
 										a link to reset your password.
@@ -81,7 +81,7 @@
 									<input type="email" required class="my_log_in">
 									<button type="submit" class="btn my_log_in">send link to reset my passowrd</button>
 
-								</form>
+								</div>
 							</div>
 						</div>
 					</div>
