FROM na svim delovima promenjen u DIV

--- a/trial_lesson.html
+++ b/trial_lesson.html
@@ -530,7 +530,7 @@
 			<div class="container">
 				<h3>Details</h3>
 				<div class="wrapper">
-					<form action="">
+					<div class="details_form">
 						<div class="row">
 							<label for="lesson_type">Lesson type</label>
 							<button class="lesson active_button">Private lesson</button>
@@ -592,7 +592,7 @@
 							></textarea>
 						</div>
 						<button>Book</button>
-					</form>
+					</div>
 				</div>
 			</div>
 		</section>
