--- a/tutor_profile.html
+++ b/tutor_profile.html
@@ -145,7 +145,7 @@
 			<div class="container">
 				<h3>Edit my profile</h3>
 				
-					<form action="">
+					<idv class="edit_prof_form">
 						<div class="email">
 							<label for="email">My email (login info)</label>
 							<input
